--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,8 @@
 <%= form_for @post do |f| %>
-  <%= f.label "Comment" %>
-  <%= f.text_field :comment_content %>
-  <%= f.collection_select :users, User.all, :id, :username %>
+
+  <%= f.fields_for :comments, post.comments.build do |comments_fields| %>
+   <%= comments_fields.text_field :content %>
+  <% end %>
+
   <%= f.submit %>
 <% end %>
