--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,9 @@
 <%= form_for @post do |f| %>
 
+  <%= f.text_field :comment %>
+
   <%= f.fields_for :comments, @post.comments.build do |comments_fields| %>
-   <%= comments_fields.text_field :content %>
+   <%= comments_fields.text_field :commet_content %>
   <% end %>
 
   <%= f.submit %>
