--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,7 @@
   <%= f.text_field :comment %>
 
   <%= f.fields_for :comments, @post.comments.build do |comments_fields| %>
-   <%= comments_fields.text_field :commet_content %>
+   <%= comments_fields.text_field :comment_content %>
   <% end %>
 
   <%= f.submit %>
