--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,11 @@
 <%= form_for @post do |f| %>
 
-  <%= f.text_field :comment %>
+  <input="text" name="post[comment][content]" id="comment_content">
 
-  <%= f.fields_for :comments, @post.comments.build do |comments_fields| %>
-   <%= comments_fields.text_field :comment_content %>
+  <%= f.collection_select :user, User.all, :id, :name %>
+
+  <%= f.fields_for :comments, @post.comments.build do |comment| %>
+   <%= comment.text_field :content %>
   <% end %>
 
   <%= f.submit %>
