--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,15 +1,11 @@
+<%binding.pry%>
+
 <%= form_for @post do |f| %>
 
   <input type = "text" name="post[comment][content]" id="comment_content">
 
-  <%= f.text_field :users, list: "comment_user_id" %>
-    <datalist id = "comment_user_id">
-      <%User.all.each do |user| %>
-          <option value="<%= user.username %>"></option>  
-      <% end %>
-    </datalist>
-  
 
+  
 
   <%= f.submit %>
 <% end %>
