--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,7 @@
+#show an existing post
+#allow a user to comment on a post through a form
+
+
 <%= form_for @post do |f| %>
 <%binding.pry%>
   <%= f.fields_for :comments, @post.comments.build do |comment| %>
