--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,9 +4,7 @@
   <%= f.label "Content" %>
   <%= f.text_area :content %>
 
-<%binding.pry%>
-  create a selection list/box of all of the categories
-
+<!-- CHOOSE FROM A LIST OF CATEGORIES -->
   <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
   <%= f.fields_for :categories, post.categories.build do |categories_fields| %>
      <%= categories_fields.text_field :name %>
