--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,8 @@
 <h2>Post Title: <%=@post.title%> </h2>
 <h2>Post Content: <%=@post.content%> </h2>
+<h2>Post Categories: <h2>
+  <ul>
+    <%@post.categories.each do |category|%>
+      <li>  <%= category.name %>  </li>
+    <%end%>
+  </ul>
