--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -7,9 +7,10 @@
 <!-- CHOOSE FROM A LIST OF CATEGORIES -->
   <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
 
+<%binding.pry%>
 <!-- CREATE YOUR OWN CATEGORY -->
-  <%= f.fields_for :categories, post.categories.build do |categories_attributes| %>
-    <%= categories_attributes.text_field :name %>
+  <%= f.fields_for :categories, post.categories.build do |categories_fields| %>
+    <%= categories_fields.text_field :name %>
   <% end %>
 
 
