--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,19 +1,16 @@
+<div class=post-content>
+  <%= @post.content %>
+</div>
 <%= form_for post do |f| %>
   <%= f.label "Title" %>
   <%= f.text_field :title %>
   <%= f.label "Content" %>
   <%= f.text_area :content %>
-
-<!-- CHOOSE FROM A LIST OF CATEGORIES -->
   <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
-
-
-<!-- CREATE YOUR OWN CATEGORY -->
   <%= f.fields_for :categories, post.categories.build do |categories_fields| %>
     <%= categories_fields.text_field :name %>
   <% end %>
 
-
-
   <%= f.submit %>
 <% end %>
+
