--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -8,7 +8,7 @@
   <%= f.text_area :content %>
   <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
   <%binding.pry%>
-  <%= f.fields_for :categories, post.categories.build do |categories_fields| %>
+  <%= f.fields_for :categories_attributes, post.categories.build do |categories_fields| %>
     <%= categories_fields.text_field :name %>
   <% end %>
 
