--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,6 +12,8 @@
   <h2>Post Comments: <h2>
     <ul>
       <%@post.comments.each do |comment|%>
+      <%binding.pry%>
         <li>  <%= comment.content %>  </li>
+        <%= link_to comment.user.username, user_path(comment.user) %>
       <%end%>
     </ul>
