--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,8 +20,7 @@
 
     <h2>Users who have commented: <h2>
       <ul>
-        <%@post.unique_users%>
-        <%@post.users.each do |user|%>
+        <%@post.unique_users.each do |user|%>
           <%= link_to user.username, user_path(user) %>
         <%end%>
       </ul>
