--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,9 +10,10 @@
   </ul>
 
 
-  <%= form_for @post do |f| %>
+  <%= form_for @comment do |f| %>
     <%= f.label "Content" %>
     <%= f.text_area :content %>
+    <%= f.collection_select :user_id, User.all, :id, :username, @post %>
     <%= f.submit %>
   <% end %>
 
