--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,7 @@
   </ul>
 
 
-  <%= form_for @post.comments do |f| %>
+  <%= form_for @post.comments.first do |f| %>
     <%= f.label "Content" %>
     <%= f.text_area :content %>
     <%= f.collection_select :user_id, User.all, :id, :username %>
