--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,6 +21,7 @@
   <h2>Post Comments: <h2>
     <ul>
       <%@post.comments.each do |comment|%>
+      <%binding.pry%>
         <li>  <%= comment.content %>  </li>
       <%end%>
     </ul>
