--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,14 +10,6 @@
   </ul>
 
 
-  <%= form_for @post.comments.first do |f| %>
-    <%= f.label "Content" %>
-    <%= f.text_area :content %>
-    <input type="hidden" name="post_id" value ="<%=@post.id%>" id="post_id">
-    <%= f.collection_select :user_id, User.all, :id, :username %>
-    <%= f.submit %>
-  <% end %>
-
   <h2>Post Comments: <h2>
     <ul>
       <%@post.comments.each do |comment|%>
@@ -33,3 +25,12 @@
           <%= link_to user.username, user_path(user) %>
         <%end%>
       </ul>
+
+    <%@post.comments.build%>
+      <%= form_for @post.comments.first do |f| %>
+        <%= f.label "Content" %>
+        <%= f.text_area :content %>
+        <input type="hidden" name="post_id" value ="<%=@post.id%>" id="post_id">
+        <%= f.collection_select :user_id, User.all, :id, :username %>
+        <%= f.submit %>
+      <% end %>
