--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,6 +15,7 @@
     <ul>
       <%@post.comments.each do |comment|%>
         <li>  <%= comment.content %>  </li>
+        <li> <%=comment.user.username %> says: <%=comment.content%> <li>
       <%end%>
     </ul>
 
