--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -28,19 +28,24 @@
         <%end%>
       </ul>
 
+<h1> Add a comment </h1>
     <%@post.comments.build%>
       <%= form_for @post.comments.first do |f| %>
         <%= f.label "Content" %>
         <%= f.text_area :content %>
-
+  <br>
         <input type="hidden" name="post_id" value ="<%=@post.id%>" id="post_id">
-
+  <br>
+      <h3> Here is a list of all of the users to choose from</h3>
         <%= f.collection_select :user_id, User.all, :id, :username %>
-        
-        <%= f.fields_for :user do |user_fields| %>
+  <br>
+
+      <h3> Or create a new user </h3>
+<input type="text" name="comment[user][username]" id="comment_user_username">
+        <%= f.fields_for :content do |user_fields| %>
           <%= user_fields.text_field :username %>
         <% end %>
 
-
+  <br>
         <%= f.submit %>
       <% end %>
