--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,6 +14,7 @@
   <h2>Post Comments: <h2>
     <ul>
       <%@post.comments.each do |comment|%>
+      <%binding.pry%>
         <li>  <%= comment.content %>  </li>
         <li> <%=comment.user.username %> says: <%=comment.content%> <li>
       <%end%>
