--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -34,7 +34,7 @@
         <%= f.label "Content" %>
         <%= f.text_area :content %>
   <br>
-        <input type="hidden" name="post_id" value ="<%=@post.id%>" id="post_id">
+        <input type="hidden" name="comment[post_id]" value ="<%=@post.id%>" id="post_id">
   <br>
       <h3> Here is a list of all of the users to choose from</h3>
         <%= f.collection_select :user_id, User.all, :id, :username %>
